--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,167 @@ body
     font-size: calc(14px + 0.5vw);
 }
 
-header h1 {
-    font-size: calc(30px + 0.5vw);
+/*
+    ANIMATED HEADER
+*/
+
+header 
+{
+    align-items: center;
+    display: flex;
+    font-size: 18px;
+    height: 80vh;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    transform-style: preserve-3d;
+    perspective: 100px;
 }
 
-header img{
-    width: 100px;
-    height: 100px;
+header:before 
+{
+    animation: fade-slide-down 2s .5s cubic-bezier(0, 0.5, 0, 1) forwards;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.8)), url(https://cssanimation.rocks/levelup/public/images/background.jpg) no-repeat bottom;
+    background-size: cover;
+    content: "";
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
 }
+
+    header:after {
+        animation: rotate-up .5s .5s cubic-bezier(0, 0.5, 0, 1) forwards;
+        background: #F9FCFF;
+        content: "";
+        height: 40rem;
+        left: -5%;
+        position: absolute;
+        right: -5%;
+        top: 90%;
+        transform-origin: 0 0;
+        z-index: 0;
+        content: " ";
+        display: table;
+        clear: both;
+    }
+
+
+.header-title 
+{
+    color: #fff;
+}
+
+
+.header-button {
+    transform: translateZ(.1px);
+    position: relative;
+    z-index: 10;
+    background: #e5ac8e;
+    font-size: 14px;
+    border-radius: 0.5em;
+    padding: 0 1em;
+    position: relative;
+    overflow: hidden;
+    line-height: 60px;
+}
+    .header-button a {
+        color: white;
+        text-decoration: none;
+    }
+
+.header-button a:visited{
+    color: white;
+    text-decoration: none;
+}
+
+
+.animate-pop-in 
+{
+    animation: pop-in .6s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
+    opacity: 0;
+}
+
+.logo {
+    animation-delay: .6s;
+    width: 80px;
+    height: auto;
+    display: block;
+    text-decoration: none;
+    float: left;
+    margin-top: 5px;
+}
+
+.header-title 
+{
+    animation-delay: .8s;
+}
+
+.header-button {
+    animation-delay: 1.1s;
+}
+
+.header-button::after {
+    content: '';
+    position: absolute;
+    top: -50%;
+    right: -50%;
+    bottom: -50%;
+    left: -50%;
+    background: linear-gradient(to bottom, rgba(229, 172, 142, 0), rgba(255,255,255,0.5) 50%, rgba(229, 172, 142, 0));
+    transform: rotateZ(60deg) translate(-5em, 7.5em);
+}
+
+.header-button:hover::after, .header-button:focus::after {
+    animation: sheen 1s forwards;
+}
+
+@keyframes sheen {
+    100% {
+        transform: rotateZ(60deg) translate(1em, -9em);
+    }
+}
+
+/* Animations */
+
+@keyframes fade-slide-down {
+    0% {
+        opacity: 0;
+        transform: translateY(-4rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+@keyframes pop-in {
+    0% {
+        opacity: 0;
+        transform: translateY(-4rem) scale(.8);
+    }
+
+    100% {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+@keyframes rotate-up {
+    100% {
+        transform: rotateZ(-4deg);
+    }
+}
+
+
+/*
+    NAVIGATION BAR
+*/
 
 ul {
     list-style: none;
@@ -24,39 +177,6 @@ ul {
     margin: 0;
 }
 
-.main-header {
-    margin: auto;
-    width: 75%;
-    min-height: 90px;
-    padding: 1em 2em;
-    border: 2px solid #2675a9;
-    border-top: none;
-    border-radius: 0 0 5px 5px;
-    background: #2980b9;
-}
-
-    .main-header:after {
-        content: " ";
-        display: table;
-        clear: both;
-    }
-
-.logo {
-    display: block;
-    text-decoration: none;
-    float: left;
-    margin-top: 5px;
-}
-
-    .logo::before {
-        color: #fff;
-        content: "\e001";
-        font-weight: normal;
-        font-style: normal;
-        font-size: 2.5em;
-        font-family: "icomoon";
-        -webkit-font-smoothing: antialiased;
-    }
 
 .dropdown,
 .flyout {
@@ -142,7 +262,7 @@ button {
     padding: 0 1em;
     position: relative;
     overflow: hidden;
-    line-height: 32px;
+    line-height: 60px;
 }
 
 button::after {
